--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@tanstack/react-query": "^5.71.1",
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/axios": "^0.9.36",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
